fix squashed bubbles

--- a/src/components/templates/AvatarGrid/AvatarGrid.scss
+++ b/src/components/templates/AvatarGrid/AvatarGrid.scss
@@ -22,46 +22,9 @@ $page-max-width: 1240px;
   width: 100%;
   max-width: 1440px;
   margin: 80px auto 0;
-  height: auto;
   display: flex;
   align-items: center;
   padding: 20px;
-
-  .room-title {
-    border: 1px white solid;
-    padding-top: 5px;
-    border-radius: 14px;
-    position: absolute;
-    border-width: 2;
-    z-index: 1;
-    border-color: #3e3838;
-    background-color: #3e3838;
-    text-align: center;
-  }
-
-  .room-border {
-    position: absolute;
-    border-width: 2;
-    border-radius: 14px;
-    border: solid 2px $green;
-    transition: all 400ms cubic-bezier(0.23, 1, 0.32, 1);
-    background-color: rgba(0, 255, 0, 0.2);
-    background-repeat: no-repeat;
-    background-size: cover;
-
-    &:hover {
-      transform: scale(1.05);
-      box-shadow: 0 0 0 3px $green, 0 0 20px $green;
-    }
-  }
-
-  .room-area {
-    position: absolute;
-    border-width: 2;
-    border-radius: 14px;
-    background-repeat: no-repeat;
-    background-size: cover;
-  }
 
   .seat-row {
     width: 100%;
@@ -88,13 +51,14 @@ $page-max-width: 1240px;
     }
 
     .user {
+      width: 100%;
+      height: 100%;
       border-radius: 100%;
-      padding: 6%;
+      background-size: cover;
     }
 
     .me {
       border: purple 1px solid;
-      box-shadow: 0px 0px 40px 20px #fff;
     }
 
     .profile-avatar {
@@ -122,6 +86,14 @@ $page-max-width: 1240px;
       transform: scale(1.1);
       cursor: pointer;
     }
+  }
+
+  .adjacent {
+    opacity: 0.3;
+  }
+
+  .near-adjacent {
+    opacity: 0.2;
   }
 }
 
@@ -204,6 +176,12 @@ $page-max-width: 1240px;
       }
     }
 
+    &.grid-room_blue.hitting-room {
+      background-color: darken($blue, 15%);
+      box-shadow: inset 0 0 0 3px $blue, 0 0 30px 30px rgba($blue, 0.3);
+      background-size: cover;
+    }
+
     &:hover {
       transform: scale(1.06);
     }
@@ -217,11 +195,11 @@ $page-max-width: 1240px;
       background-position: center;
       background-size: cover;
     }
+
     .grid-room-title {
       line-height: 1;
       text-align: center;
       text-shadow: 0 2px 4px rgba($black, 0.4);
-      ms-word-break: break-all;
       word-break: break-all;
 
       /* Non standard for webkit */
@@ -245,6 +223,10 @@ $page-max-width: 1240px;
         transition: all 400ms cubic-bezier(0.23, 1, 0.32, 1);
         opacity: 1;
         transform: translateY(0) scale(1);
+        .hitting-room {
+          opacity: 0;
+          transform: translateY(20px) scale(0.8);
+        }
         .grid-room-avatar {
           width: 24px;
           height: 24px;
@@ -267,6 +249,7 @@ $page-max-width: 1240px;
           }
         }
       }
+
       .grid-room-btn {
         position: absolute;
         top: 0;
@@ -277,7 +260,19 @@ $page-max-width: 1240px;
         opacity: 0;
         transform: translateY(-20px) scale(0.8);
       }
+
+      .grid-room-btn.hitting-room {
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        margin: auto;
+        transition: all 400ms cubic-bezier(0.23, 1, 0.32, 1);
+        opacity: 1;
+        transform: translateY(2px) scale(1);
+      }
     }
+
     &:hover {
       .grid-room-infos {
         .grid-room-people {
